--- a/Final_project/About.html
+++ b/Final_project/About.html
@@ -62,9 +62,9 @@ The books have sold 90 million copies worldwide as of April 2019,[5] after havin
             <!-- Section: Social media -->
             <section class="mb-4">
               <a href="https://www.facebook.com/HBO"><img src="./icons8-facebook-48.png" alt="facebook logo"></a>
-              <a href="https://twitter.com/hbo"></a><img src="./icons8-twitter-48.png" alt="Twitter logo"></a>
-              <a href="https://www.instagram.com/hbo"></a><img src="./icons8-instagram-48.png" alt="Instagram logo"></a>
-              <a href="https://www.hbo.com/"></a><img src="./icons8-hbo-50.png" alt="hbo logo"></a>
+              <a href="https://twitter.com/hbo"><img src="./icons8-twitter-48.png" alt="Twitter logo"></a>
+              <a href="https://www.instagram.com/hbo"><img src="./icons8-instagram-48.png" alt="Instagram logo"></a>
+              <a href="https://www.hbo.com/"><img src="./icons8-hbo-50.png" alt="hbo logo"></a>
             </section>
             <!-- Section: Social media -->
           </div>
