--- a/Final_project/media.html
+++ b/Final_project/media.html
@@ -52,9 +52,9 @@
       <!-- Section: Social media -->
       <section class="mb-4">
         <a href="https://www.facebook.com/HBO"><img src="./icons8-facebook-48.png" alt="facebook logo"></a>
-        <a href="https://twitter.com/hbo"></a><img src="./icons8-twitter-48.png" alt="Twitter logo"></a>
-        <a href="https://www.instagram.com/hbo"></a><img src="./icons8-instagram-48.png" alt="Instagram logo"></a>
-        <a href="https://www.hbo.com/"></a><img src="./icons8-hbo-50.png" alt="hbo logo"></a>
+        <a href="https://twitter.com/hbo"><img src="./icons8-twitter-48.png" alt="Twitter logo"></a>
+        <a href="https://www.instagram.com/hbo"><img src="./icons8-instagram-48.png" alt="Instagram logo"></a>
+        <a href="https://www.hbo.com/"><img src="./icons8-hbo-50.png" alt="hbo logo"></a>
       </section>
       <!-- Section: Social media -->
     </div>
